# ERP-SMS

./: .env.example  AGENTS.md  ARCHITECTURE.md  BUSINESS_PROCESS_FLOW.md  DEPLOYMENT_AND_CI_CD.md  ERD_AND_DATA_DICTIONARY.md  FIT_GAP_ANALYSIS.md  PRD.md  README.md  SECURITY_AND_PERMISSIONS.md  TESTING_AND_QA_STRATEGY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/: init-bench.sh
sms_aftersales/: hooks.py  modules.txt  seed_sample_data.py
sms_aftersales/hr_service/: __init__.py
sms_aftersales/insurance/: __init__.py
sms_aftersales/insurance/doctype/sms_insurance_claim/: sms_insurance_claim.json  sms_insurance_claim.py
sms_aftersales/insurance/doctype/sms_insurance_policy/: sms_insurance_policy.json  sms_insurance_policy.py
sms_aftersales/retail_network/: __init__.py  events.py
sms_aftersales/retail_network/doctype/sms_network_node/: sms_network_node.json  sms_network_node.py
sms_aftersales/retail_network/doctype/sms_service_intake/: sms_service_intake.json  sms_service_intake.py
sms_aftersales/retail_network/doctype/sms_service_order/: sms_service_order.json  sms_service_order.py
sms_aftersales/warehouse/: __init__.py  events.py
